--- a/_template.html
+++ b/_template.html
@@ -31,40 +31,37 @@
 <meta name="twitter:description" content="">
 <meta name="twitter:image" content="">
 
-<!-- Import Google Fonts -->
+<!-- Google Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
 
-<!-- Import CSS -->
+<!-- CSS -->
 <link rel="stylesheet" href="/css/style.css">
 
-<!-- Import JS/jQuery Library -->
+<!-- JS Libraries -->
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 </head>
 <body>
 
-<!-- START Header Area -->
+<!-- Header// -->
 <header>
   Header section
 </header>
-<!-- END Header Area -->
 
-<!-- START Main Area -->
+<!-- Main// -->
 <main>
   Main section
 </main>
-<!-- END Main Area -->
 
-<!-- START Footer Area -->
+<!-- Footer// -->
 <footer>
   Footer section
 </footer>
-<!-- END Footer Area -->
 
 
-<!-- Import JS -->
-<script src="/js/function.js"></script>
+<!-- Javascript -->
+<script src="/js/script.js"></script>
 
 </body>
 </html>
